--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,14 @@
         <taglibVersion>1.1.2</taglibVersion>
         <servletVersion>3.0-alpha-1</servletVersion>
         <jsonVersion>1.9.13</jsonVersion>
-        <jacksonVersion>2.5.0</jacksonVersion>
+        <jacksonVersion>2.9.10</jacksonVersion>
         <mysqlVersion>5.1.38</mysqlVersion>
         <c3p0Version>0.9.1.2</c3p0Version>
         <log4jVersion>1.2.17</log4jVersion>
         <fileuploadVersion>1.3.1</fileuploadVersion>
         <lombokVersion>1.16.10</lombokVersion>
+        <redisVersion>1.6.2.RELEASE</redisVersion>
+        <jedisVersion>2.7.1</jedisVersion>
     </properties>
 
     <dependencies>
@@ -29,8 +31,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <version>4.12</version>
         </dependency>
 
         <!-- 日志输出  -->
@@ -185,11 +186,48 @@
             <version>${lombokVersion}</version>
             <scope>provided</scope>
         </dependency>
+
+
+        <!--spring整合redis,模板.工厂.连接池等  -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>${redisVersion}</version>
         </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedisVersion}</version>
+        </dependency>
+
+
+        <!--  swagger2 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+
+
 
 
     </dependencies>
