--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,3 +9,13 @@ hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto =update
+
+#redis≈‰÷√
+redis.host=127.0.0.1
+redis.port=6379
+redis.password=
+
+redis.maxIdle=300
+redis.maxActive=600
+redis.maxWait=1000
+redis.testOnBorrow=true
